update snapshot 9.2: preliminary option for secondary JWT